# ensi

./: pyproject.toml
data/dreams_and_interpretations/: dream_bekhten.txt  dream_djoser.txt  dream_enkidu_1.txt  dream_enkidu_2.txt  dream_gilgamesh_1.txt  dream_gilgamesh_2.txt  dream_gilgamesh_3_1.txt  dream_gilgamesh_3_2.txt  dream_gilgamesh_3_3.txt  dream_gudea.txt  dream_gyges.txt  dream_hattushili_1.txt  dream_hattushili_2.txt  dream_idide.txt  dream_ishtar.txt  dream_ishtar_1.txt  dream_ishtar_2.txt  dream_ishtar_3.txt  dream_king.txt  dream_merenptah.txt  dream_nabonidus_1.txt  dream_nabonidus_2.txt  dream_nekthonbes.txt  dream_nektonabos.txt  dream_poem.txt  dream_ptolemaios_1.txt  dream_ptolemaios_2.txt  dream_ptolemy_soter.txt  dream_queen_1.txt  dream_queen_2.txt  dream_queen_3.txt  dream_sethos.txt  dream_tages.txt  dream_taimhotep.txt  dream_tammuz.txt  dream_tanutamun.txt  dream_thumose.txt  dream_warning.txt
data/example_incantations/: type_a.txt  type_b.txt  type_b_var_1.txt  type_c.txt  type_d.txt  type_e.txt  type_e_var_1.txt  type_e_var_2.txt  type_f.txt  type_g.txt  type_g_var_1.txt  type_h.txt  type_i.txt  type_j.txt  type_k.txt  type_l.txt  type_m.txt  type_n.txt
data/other_literature/: deities_demons.json
data/rules_for_interpretation/: ancient_rules.json  ancient_rules.txt  modernized_rules.json  modernized_rules.txt
notebooks/: ollama.ipynb  rules.ipynb
pydantic/: models.py
